--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											C, Java, SQL , PL/SQL, Shell scripting<br>
+											C, Java, Python, SQL , PL/SQL, Shell scripting<br>
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -134,7 +134,7 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											JavaScript, JQuery, HTML, CSS<br> 
+											JavaScript, PHP, HTML, CSS<br> 
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -184,14 +184,15 @@ http://www.templatemo.com/tm-497-upper
                                 <div class="tm-img-gallery gallery-two">
                                     
                                     <div >                                    
-                                        <br><p class="tm-text"><span class="tm-white"><Font size="5">Developer with 2.1 years of extensive experience in Data warehouse and ETL technologies; worked for various clients and projects in every phase of Software Development Life Cycle, from business requirement gathering to project delivery. Excellent design and integration problem solving skills.<br></font></span>
+                                        <br><p class="tm-text"><span class="tm-white"><Font size="5">Developer with 3 years of extensive experience in Data warehouse and ETL technologies; worked for various clients and projects in every phase of Software Development Life Cycle, from business requirement gathering to project delivery. Excellent design and integration problem solving skills.<br></font></span>
                                         </p>
                                     </div><br>
 									<div>
 										<div class="text-xs-left tm-textbox tm-textbox-padding tm-bg-white-translucent tm-3-col-textbox-inner">
 												<img src="img/Evry_logo_RGB_PPT.png" alt="Image" height="150" width="300" >
 												<h2 class="tm-text-title">Evry India</h2>                                           
-												<p class="tm-text"><font size="4.5">Software Engineer EVRY India Pvt Ltd, Bangalore, India for 2.1 years (2014 Aug – 2016 Aug)<br>
+												<p class="tm-text"><font size="4.5">Software Engineer EVRY India Pvt Ltd, Bangalore, India for 2.1 years (2014 Aug – 2016 Aug)<br><br>
+												Roles<br> <br>
 												 Working experience in Data Warehouse applications, directly responsible for the Extraction Transformation and Loading (ETL) of data from multiple sources into Data warehouse.<br>
 												 Strong knowledge in Informatica, SQL and Data Warehousing Concepts.<br>
 												 Extensively worked on Informatica designer for designing and developing mappings from varied transformation logic using Expression, Source Qualifier, Filter, Router, Joiner, Lookup, Sorter, Aggregator and Update Strategy etc.<br>
@@ -207,13 +208,14 @@ http://www.templatemo.com/tm-497-upper
 									</div>
 									<div class="text-xs-left tm-textbox tm-textbox-padding tm-bg-white-translucent tm-3-col-textbox-inner">
 									  <h2 class="tm-text-title">Texas Tech Univercity</h2>                                           
-												<p class="tm-text"><font size="4.5">Graduate Asistant (2016 Dec – Present)<br><br>
+												<p class="tm-text"><font size="4.5">Graduate Assistant at Athletics Department, Texas Tech University, Lubbock, TX (2016 Dec – present)<br><br>
 												Roles<br> <br>
-												 Website Maintenance<br>
-												 MDT Deployments<br>
-												 KACE Deployments<br>
-												 Printer, File Share Servers Maintenance<br>
-												 IT Support<br></font></p>
+												 Development and maintenance of Texas tech Athletics Department Website.<br>
+												 Creating Tableau dashboard to view the trends of expenditure based on different programs.<br>
+												 Responsible for Group policy and active directory management.<br>
+												 Responsible for Servers (File Share, Printer) building and maintenance.<br>
+												 Involving in Deployments through MDT and DELL KACE via PXE boot.
+												 Providing IT Support for Athletics employees and athlete's<br></font></p>
 									</div>
                                     </div>
                                     <!--
@@ -590,7 +592,7 @@ http://www.templatemo.com/tm-497-upper
 													<td>
 													&nbsp
 													</td>
-													<td>    #3102 ,W099,4th Street  Lubbock, TX-79415
+													<td>    #314E, 201 Indian Ave Lubbock, TX-79415
 													</td>
 												</tr>
 												<tr>
@@ -605,7 +607,7 @@ http://www.templatemo.com/tm-497-upper
 													<td>
 													&nbsp
 													</td>
-													<td>    +1 (806) 407 –0756 
+													<td>    +1 (806) 620 8017 
 													</td>
 												</tr>
 												<tr>
