--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ http://www.templatemo.com/tm-497-upper
 													<td>
 													&nbsp
 													</td>
-													<td>    arunjegarkal1993@gmail.com
+													<td>    arun-kumar.jegarkal@ttu.edu
 													</td>
 												</tr>
 												<tr>
