--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											C, Java, Python, SQL , PL/SQL, Shell scripting<br>
+											Java, Python, C, SQL, PL/SQL, Shell scripting<br>
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -134,7 +134,7 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											JavaScript, PHP, HTML, CSS<br> 
+											HTML5, HTML, CSS, JavaScript, PHP, XML, JSON<br> 
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -146,7 +146,19 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											IBM DB2 9.1, Oracle 9i <br>
+											Oracle 9i, SQL Server<br>
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td>
+											Frameworks       
+										</td>
+										<td>
+											&nbsp&nbsp:&nbsp&nbsp
+										</td>
+										<td>
+											Spring, Hibernate, Spring Boot (MVC)<br>
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -158,8 +170,7 @@ http://www.templatemo.com/tm-497-upper
 											&nbsp&nbsp:&nbsp&nbsp
 										</td>
 										<td>
-											Informatica PowerCenter Client 9.0.1 and 9.5.1, <br>
-											Informatica Data Explorer (IDE),<br> SQL Developer and Toad,<br> Informatica Cloud,<br> Spago BI,<br> Power Exchange
+											Eclipse, Net Beans, Informatica PowerCenter Client 9.0.1 and 9.5.1, <br> Informatica Data Explorer (IDE), SQL Developer and Toad, <br> Informatica Cloud, Tableau 10.3, Power Exchange <br>											
 										</td>
 									</tr>
 									</table>
@@ -184,7 +195,7 @@ http://www.templatemo.com/tm-497-upper
                                 <div class="tm-img-gallery gallery-two">
                                     
                                     <div >                                    
-                                        <br><p class="tm-text"><span class="tm-white"><Font size="5">Developer with 3 years of extensive experience in Data warehouse and ETL technologies; worked for various clients and projects in every phase of Software Development Life Cycle, from business requirement gathering to project delivery. Excellent design and integration problem solving skills.<br></font></span>
+                                        <br><p class="tm-text"><span class="tm-white"><Font size="5">Developer with 3+ years of extensive experience in Java, Python,Data warehouse and ETL technologies; worked for various clients and projects in every phase of Software Development Life Cycle, from business requirement gathering to project delivery. Excellent design and integration problem solving skills.<br></font></span>
                                         </p>
                                     </div><br>
 									<div>
@@ -210,12 +221,10 @@ http://www.templatemo.com/tm-497-upper
 									  <h2 class="tm-text-title">Texas Tech Univercity</h2>                                           
 												<p class="tm-text"><font size="4.5">Graduate Assistant at Athletics Department, Texas Tech University, Lubbock, TX (2016 Dec – present)<br><br>
 												Roles<br> <br>
-												 Development and maintenance of Texas tech Athletics Department Website.<br>
-												 Creating Tableau dashboard to view the trends of expenditure based on different programs.<br>
-												 Responsible for Group policy and active directory management.<br>
-												 Responsible for Servers (File Share, Printer) building and maintenance.<br>
-												 Involving in Deployments through MDT and DELL KACE via PXE boot.
-												 Providing IT Support for Athletics employees and athlete's<br></font></p>
+												 Development and maintenance of Texas tech Athletics Department Website.
+												 Creating Tableau dashboard to view the trends of expenditure based on different programs.
+												 Responsible for Creating Group policies to manage the functionalities of files shares and Printers in Organizational Unites.
+												 Involving in Deployments through DELL KACE and MDT via PXE boot.<br></font></p>
 									</div>
                                     </div>
                                     <!--
@@ -483,7 +492,7 @@ http://www.templatemo.com/tm-497-upper
                                 <div class="col-xs-12">
                                     <div class="tm-flex">
                                         <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
-                                            <h2 class="tm-text-title">File Converter</h2>
+                                            <h2 class="tm-text-title">File Converter (Java Application)</h2>
                                             <p class="tm-text"><font size="4.5">Introduction<br><br>
 											PDF is global standard for capturing and reviewing rich information. It is more secure
 											and dynamic than ever. Basically PDF files are read only , which are not editable so we
@@ -506,11 +515,44 @@ http://www.templatemo.com/tm-497-upper
                             </div>
 							<br>
 							<br>
+							<br>
+							<br>
 							<div class="row">
                                 <div class="col-xs-12">
                                     <div class="tm-flex">
                                         <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
-                                            <h2 class="tm-text-title">Know before you buy</h2>
+                                            <h2 class="tm-text-title">A High Performance, Scalable Event-Bus System for Distributed Data Synchronization (Java Application)</h2>
+                                            <p class="tm-text"><font size="4.5">Introduction<br><br>
+											In this project, we basically focus to overcome the limitations of the existing techniques and our primary goal is to provide the support for fully transactional communication between the clients and the eventbus thereby making the communication more effective.<br>
+											<br> Websockets replaces the native socket and multithreading concepts of java, which is the efficient way of establishing the pub-sub connection. Serialized the message delivery between publisher-eventbus-subscriber by using ‘Avro’ which is one of the serialization techniques used in hadoop
+											<br><br><a href="https://github.com/Arunjegarkal/Gnutella-style-peer-to-peer-P2P-file-sharing-system" target="_blank">Github Link </a></font></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+							<br>
+							<br>
+							<div class="row">
+                                <div class="col-xs-12">
+                                    <div class="tm-flex">
+                                        <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
+                                            <h2 class="tm-text-title">Gnutella style P2P file sharing system (Java Application)</h2>
+                                            <p class="tm-text"><font size="4.5">Introduction<br><br>
+											This project is about implementation of Gnutella-style peer-to-peer (P2P) file sharing system, where signal peer act as both client and server with performing the file search within the specified network without using the Indexing server. I have implemented using java socket programming and multithreading concepts. When peer is started its respected server thread is started which runs in the background, given config file is read to find its peer and starts the client thread for each neighbor and when the neighboring peer gets online connection is established this connection is used to search file among the network.
+											Server thread is used to search file within its local directory and store the result into the list once the local search is performed it reads the config file to start the client thread to all its neighbors. time-to-live (TTL) is attached to the message along with the filename need to be searched. TTL is used for preventing query messages from being forwarded infinitely many times. Client thread is used to send the file to search to servers which are connected to it. Server Download thread performs the downloading of file from the peer which is selected by the user.
+											Same server and client threads are used for broadcasting the file modification message to all the neighboring peers which has that modified file.
+											<br><br><a href="https://github.com/Arunjegarkal/Scalable_Event_Bus" target="_blank">Github Link </a></font></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+							<br>
+							<br>
+							<div class="row">
+                                <div class="col-xs-12">
+                                    <div class="tm-flex">
+                                        <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
+                                            <h2 class="tm-text-title">Know before you buy (Web Application)</h2>
                                             <p class="tm-text">Is a website suggests user the products (Laptop or its accessories) from different brands based on his specifications (cost, brand, model). This website gives the complete idea regarding the latest products in the market.</p>     
                                         </div>
                                     </div>
@@ -581,8 +623,11 @@ http://www.templatemo.com/tm-497-upper
                                                 <p class="tm-text">Pursuing Masters in Computer Science at Texas Tech University. Graduating in the spring semester (May 2018) . I am currently working as a Graduate Assistant for Athletics IT department at Texas Tech University.
 												<br>
 												<br>
-												Extensive experience in Data warehouse and ETL technologies; worked for various clients and projects in every phase of Software Development Life Cycle, from business requirement gathering to project delivery. Excellent design and integration problem solving skills.</p>
-                                                <br><br><br>
+												I have been in Information Technology Industry for about 3+ years, where I got chance to interact with individuals and teams across the globe and provide service to the best of my knowledge. Over the years I have gained skillset of adapting and developing creative applications, websites, Informatica workflows, Tableau Dashboard as per the customer’s requirements, maintaining of customer relations, ability to take ownership of tasks, applying proper problem solving strategies, proper documentation and mindset to think out of box solutions.
+												<br><br>
+												Apart from my work experience I have been fortunate to pursue my master’s degree in Computer Science, where I was exposed to latest tools and techniques along with protocols of industry implementation. With clear understanding of industry working along with education of latest tools and techniques to solve business and data problems. I find myself highly motivated and confident to deliver great service.	
+												<br><br>
+												I am interested in a new challenge and an opportunity to use my technical skills and experience in a different capacity than I have in the past.</p>
 												<center>
 												<table>
 												<tr>
@@ -669,7 +714,7 @@ http://www.templatemo.com/tm-497-upper
             
                 <div class="tm-social-icons-container text-xs-center">
 					<a href="https://www.linkedin.com/in/arun-jegarkal-2977b994/" class="tm-social-link" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://github.com/Arunjegarkal" class="tm-social-link" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/Arunjegarkal?tab=repositories" class="tm-social-link" target="_blank"><i class="fa fa-github"></i></a>
 					<a href="mailto:arunjegarkal1993@gmail.com" class="tm-social-link" target="_blank"><i class="fa fa-envelope"></i></a>
 				</div>
                 <!-- 
