--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ http://www.templatemo.com/tm-497-upper
 													<td>
 													&nbsp
 													</td>
-													<td>    #314E, 201 Indian Ave Lubbock, TX-79415
+													<td>    201 Indian Ave Lubbock, TX-79415
 													</td>
 												</tr>
 												<tr>
