--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ http://www.templatemo.com/tm-497-upper
                 <div class="tm-social-icons-container text-xs-center">
 					<a href="https://www.linkedin.com/in/arun-jegarkal-2977b994/" class="tm-social-link" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/Arunjegarkal?tab=repositories" class="tm-social-link" target="_blank"><i class="fa fa-github"></i></a>
-					<a href="mailto:arunjegarkal1993@gmail.com" class="tm-social-link" target="_blank"><i class="fa fa-envelope"></i></a>
+					<a href="mailto:arun-kumar.jegarkal@ttu.edu" class="tm-social-link" target="_blank"><i class="fa fa-envelope"></i></a>
 				</div>
                 <!-- 
 					<p class="tm-copyright-text">Copyright &copy; 2016 Your Company 
