--- a/index.html
+++ b/index.html
@@ -203,12 +203,8 @@ http://www.templatemo.com/tm-497-upper
 												<img src="img/Evry_logo_RGB_PPT.png" alt="Image" height="150" width="300" >
 												<h2 class="tm-text-title">Evry India</h2>                                           
 												<p class="tm-text"><font size="4.5">Software Engineer EVRY India Pvt Ltd, Bangalore, India for 2.1 years (2014 Aug – 2016 Aug)<br><br>
-												Roles<br> <br>
-												 Working experience in Data Warehouse applications, directly responsible for the Extraction Transformation and Loading (ETL) of data from multiple sources into Data warehouse.<br>
-												 Strong knowledge in Informatica, SQL and Data Warehousing Concepts.<br>
-												 Extensively worked on Informatica designer for designing and developing mappings from varied transformation logic using Expression, Source Qualifier, Filter, Router, Joiner, Lookup, Sorter, Aggregator and Update Strategy etc.<br>
-												 Designed ETL logic for Dimension Tables using SCD – Type1 and Type2.<br>
-												 Worked with heterogeneous data sources like DB2, Flat Files, and Mainframe Files.
+												Roles  : <br> <br>
+												As a Data Warehouse Analyst, I was responsible for the Extraction, Transformation and Loading of data from multiple sources using Informatica ETL tools and SQL. To perform these duties, a deep understanding of the Data Warehousing concepts were required. Thus, I used Informatica Designer for designing and developing mappings from varied transformation logic using Expression, Source Qualifier, Filter, Router, Joiner, Lookup, Sorter, Aggregator and Update Strategy. I also designed ETL logic for Dimension Tables using SCD – Type1 and Type2. Last, I worked with heterogeneous data sources like DB2, Flat Files and Mainframe Files to accomplish the goals of the organization.
 												</font></p>
 										</div>
 									</div>
@@ -220,11 +216,8 @@ http://www.templatemo.com/tm-497-upper
 									<div class="text-xs-left tm-textbox tm-textbox-padding tm-bg-white-translucent tm-3-col-textbox-inner">
 									  <h2 class="tm-text-title">Texas Tech Univercity</h2>                                           
 												<p class="tm-text"><font size="4.5">Graduate Assistant at Athletics Department, Texas Tech University, Lubbock, TX (2016 Dec – present)<br><br>
-												Roles<br> <br>
-												 Development and maintenance of Texas tech Athletics Department Website.
-												 Creating Tableau dashboard to view the trends of expenditure based on different programs.
-												 Responsible for Creating Group policies to manage the functionalities of files shares and Printers in Organizational Unites.
-												 Involving in Deployments through DELL KACE and MDT via PXE boot.<br></font></p>
+												Roles : <br> <br>
+												In this position, I developed and maintained the Texas Tech Athletic Department website. Used data analytics tool and Tableau to create a dashboard map of the expenditure trends of the department. As part of my duties, I created group policies, managed file shares and printers within the organizational unit. I also participated in the upkeep of the inventory by creating a tool to find missing equipment. Last, I participate in the deployment of software and patches through KACE and in the deployment of computer images through MDT via PXE boot.<br></font></p>
 									</div>
                                     </div>
                                     <!--
