--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-	  <meta http-equiv="refresh" content="1; URL=https://arunjegarkal.github.io/arunjegarkal/">
+	  <meta http-equiv="refresh" content="1; URL=http://arunjegarkal.github.io/arunjegarkal/">	 
   </head>
 
   <body id="page-top">
